feat[ticho]: 优化异常处理并移除冗余日志- 移除重复的日志记录语句，避免异常信息被记录两次
[- 在抛出异常时保留原始异常信息，便于问题追踪- 统一异常处理逻辑，提高代码可读性和维护性
- 使用 Collections.singletonList 替代 List.of以增强兼容性- 修复批量删除对象时异常处理不完整的问题]